--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                 </div>
                 <div class="about-image">
                     <div class="profile-img-placeholder">
-                        <i class="fas fa-user fa-10x" style="color: var(--primary);"></i>
+                        <img src="images/profile.jpg" alt="Kaveesha Nethmini" class="profile-img">
                     </div>
                 </div>
             </div>
@@ -937,3 +937,4 @@
     </script>
 </body>
 </html>
+
