--- a/index.html
+++ b/index.html
@@ -648,9 +648,9 @@
                 <!-- Project 1 -->
                 <div class="project-card">
                     <h3><i class="fas fa-ticket-alt"></i> StarEvents Online Event Ticketing System</h3>
-                    <div class="project-image">
-                        <i class="fas fa-ticket-alt"></i>
-                    </div>
+                    <div class="project-image" style="background: linear-gradient(45deg, #8a2be2, #6a1cb0);">
+    <img src="https://cdn-icons-png.flaticon.com/512/2092/2092683.png" alt="Event Ticketing" style="width: 80px; height: 80px;">
+</div>
                     <p class="date">Sep 2025 - Oct 2025</p>
                     <p class="institution">Associated with London Metropolitan University</p>
                     <p>Full-featured web application that streamlines the event ticketing process for customers, organizers, and administrators.</p>
@@ -678,9 +678,9 @@
                 <!-- Project 2 -->
                 <div class="project-card">
                     <h3><i class="fas fa-hotel"></i> SL Hotels Web-Based Reservation System</h3>
-                    <div class="project-image">
-                        <i class="fas fa-hotel"></i>
-                    </div>
+                    <div class="project-image" style="background: linear-gradient(45deg, #8a2be2, #6a1cb0);">
+    <img src="https://cdn-icons-png.flaticon.com/512/270/270014.png" alt="Hotel Booking" style="width: 80px; height: 80px;">
+</div>
                     <p class="date">May 2025 - Jun 2025</p>
                     <p class="institution">Associated with London Metropolitan University</p>
                     <p>Full-featured hotel reservation web application that streamlines the booking process for customers, staff, and administrators.</p>
@@ -708,9 +708,9 @@
                 <!-- Project 3 -->
                 <div class="project-card">
                     <h3><i class="fas fa-robot"></i> AI HealthyCare Chatbot System</h3>
-                    <div class="project-image">
-                        <i class="fas fa-robot"></i>
-                    </div>
+                    <div class="project-image" style="background: linear-gradient(45deg, #8a2be2, #6a1cb0);">
+    <img src="https://cdn-icons-png.flaticon.com/512/4712/4712035.png" alt="AI Chatbot" style="width: 80px; height: 80px;">
+</div>
                     <p class="date">Mar 2025 - Apr 2025</p>
                     <p class="institution">Associated with London Metropolitan University</p>
                     <p>Smart web-based medical chatbot that helps users receive accurate health information, find doctors, and book appointments.</p>
@@ -937,4 +937,5 @@
     </script>
 </body>
 </html>
+
 
