--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                 <div class="about-image">
                     <!-- Profile Image Placeholder - Replace with your actual image -->
                     <div class="profile-img" style="background: linear-gradient(45deg, var(--primary), var(--primary-light)); display: flex; align-items: center; justify-content: center; color: white; font-size: 4rem;">
-                        <i class="fas fa-user"></i>
+                        <img src="images/profile.jpg" alt="Kaveesha Nethmini" class="profile-img">
                     </div>
                     <p style="margin-top: 15px; color: var(--gray);">Add your profile photo here</p>
                 </div>
@@ -654,7 +654,7 @@
                 <div class="project-card">
                     <h3><i class="fas fa-ticket-alt"></i> StarEvents Online Event Ticketing System</h3>
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1540575467063-178a50c2df87?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Event Ticketing System">
+                        <img src="https://media.timeout.com/images/106204051/image.jpg" alt="Event Ticketing System">
                     </div>
                     <p class="date">Sep 2025 - Oct 2025</p>
                     <p class="institution">Associated with London Metropolitan University</p>
@@ -942,6 +942,7 @@
     </script>
 </body>
 </html>
+
 
 
 
