--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
                 <div class="about-image">
                     <!-- Profile Image Placeholder - Replace with your actual image -->
                     <div class="profile-img" style="background: linear-gradient(45deg, var(--primary), var(--primary-light)); display: flex; align-items: center; justify-content: center; color: white; font-size: 4rem;">
-                        <i class="fas fa-user"></i>
+                        <img src="images/profile.jpg" alt="Kaveesha Nethmini" class="profile-img">
                     </div>
                 </div>
             </div>
@@ -1285,6 +1285,7 @@
     </script>
 </body>
 </html>
+
 
 
 
